--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node --watch server.js"
   },
   "dependencies": {
+    "data-fns": "^1.1.0",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.48.0"
   },
   "engines": {
